@startuml
'https://plantuml.com/class-diagram
title US011 – "As a user, I want to add a publication to my library" - CD DDD

'==== basic style ====
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam objectFontSize 20
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam ActivationBackgroundColor black
skinparam classAttributeIconSize 0

top to bottom direction

class AddPublicationOnLibraryUI {
}

package "CONTROLLER" {

    class AddPublicationOnLibraryController {
      + getMyLibrary(userId : UserId) : Library
      + getAllItems() : List<ItemId>
      + getListOfAvailableItems(userId : UserId) : List<ItemId>
      + addItemToLibrary(selectedItemId : ItemId, userId : UserId) : boolean
    }

}

package "DOMAIN" {

package "REPOSITORY" {

    interface ILibraryRepo <<Interface>> {
        +findLibraryByUserId(userId : UserId) : Library
    }

    interface IItemRepo <<Interface>> {
        +getDifferentOf(existentItemIds : List<ItemId>) : List <ItemId>
    }

}

package "VALUE OBJECT" {

    together {
        class LibraryId <<Value Object>> #lightpink {
        +fromUserId(userId : UserId) : LibraryId
        }
        class UserId <<Value Object>>
    }
    class ItemId <<Value Object>>

}

package "LIBRARY" #b0c4d4 {

    class Library <<Root>> <<Entity>> {
      +getItemsInLibrary() : List<ItemId>
      +addItemToLibrary(itemId : ItemId) : boolean
      +sameAs(object : Object)
      +identity() : LibraryId
    }
'    class LibraryFactory <<Factory>> {
'    + createLibrary(libraryId : LibraryId) : Library
'    }

}

}

package "PERSISTENCE"  {

    package "MEM" {

        class MemoLibraryRepo {
        }

        class MemoItemRepo {
        }

    }

}

Package "DDD" {

    interface IRepository<ID, T> <<Interface>> {
    save(T) : T
    findAll() : Iterable<T>
    ofIdentity(ID) : Optional <T>
    containsOfIdentity(ID) : boolean
    }

}

AddPublicationOnLibraryUI "1" .>  "1" AddPublicationOnLibraryController : invokes
AddPublicationOnLibraryController "1"  ..> "1" ILibraryRepo : calls
AddPublicationOnLibraryController  "1"..> "1" IItemRepo : calls
AddPublicationOnLibraryController "1"..> "*" Library : <<use>>
AddPublicationOnLibraryController "1"..> "*" UserId : <<use>>
AddPublicationOnLibraryController "1"..> "1" ItemId : <<use>>

MemoLibraryRepo ..|> ILibraryRepo
MemoLibraryRepo "1" -> "*" Library: persists

Library "1" --> "1" LibraryId: has
LibraryId "1" .> "1" UserId: <<use>>
Library "1" o-- "*" ItemId : aggregates

ILibraryRepo --|> IRepository
IItemRepo --|> IRepository
MemoItemRepo ..|> IItemRepo



@enduml